# pylti1.3

./: .git-blame-ignore-revs  README.rst  pyproject.toml
.github/workflows/: tox.yml
pylti1p3/: __init__.py  actions.py  assignments_grades.py  cookie.py  cookies_allowed_check.py  course_groups.py  deep_link.py  deep_link_resource.py  deployment.py  dynamic_registration.py  exception.py  grade.py  lineitem.py  message_launch.py  names_roles.py  oidc_login.py  platform_notification.py  redirect.py  registration.py  request.py  roles.py  service_connector.py  session.py  utils.py
pylti1p3/contrib/: __init__.py  redis_cache_data_storage.py
pylti1p3/contrib/django/: __init__.py  cookie.py  message_launch.py  oidc_login.py  redirect.py  request.py  service_connector.py  session.py
pylti1p3/contrib/django/launch_data_storage/: __init__.py  cache.py
pylti1p3/contrib/django/lti1p3_tool_config/: __init__.py  admin.py  apps.py  models.py
pylti1p3/contrib/django/lti1p3_tool_config/migrations/: 0001_initial.py  __init__.py
pylti1p3/contrib/fastapi/: __init__.py  cookie.py  insecure.py  message_launch.py  oidc_login.py  redirect.py  request.py  service_connector.py  session.py
pylti1p3/contrib/fastapi/launch_data_storage/: __init__.py  cache.py
pylti1p3/contrib/flask/: __init__.py  cookie.py  message_launch.py  oidc_login.py  redirect.py  request.py  service_connector.py  session.py
pylti1p3/contrib/flask/launch_data_storage/: __init__.py  cache.py
pylti1p3/launch_data_storage/: __init__.py  base.py  cache.py  session.py
pylti1p3/message_validators/: __init__.py  abstract.py  deep_link.py  privacy_launch.py  resource_message.py  submission_review.py
pylti1p3/tool_config/: __init__.py  abstract.py  dict.py  json_file.py
tests/: base.py  django_mixin.py  flask_mixin.py  test_assignments_grades_pagination.py  test_course_groups.py  test_deep_link.py  test_deep_link_resource.py  test_dynamic_registration.py  test_grades.py  test_names_roles.py  test_platform_notification.py  test_privacy_launch.py  test_redis_cache_data_storage.py  test_resource_link.py  test_roles.py  test_service_connector_cache.py  test_submission_review_launch.py  test_tool_conf.py  test_utils.py  tool_config.py
